--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,68 @@
-asgiref==3.2.3
-Django==2.2
-djangorestframework==3.11.0
-pytz==2019.3
+amqp==2.3.2
+arramooz-pysqlite==0.1
+astroid==2.3.3
+autopep8==1.4.4
+beautifulsoup4==4.7.1
+billiard==3.5.0.4
+celery==4.2.1
+certifi==2019.3.9
+chardet==3.0.4
+CodernityDB==0.4.2
+colorama==0.4.1
+coreapi==2.3.3
+coreschema==0.0.4
+curlify==2.2.1
+defusedxml==0.6.0
+dj-database-url==0.5.0
+Django==2.2.8
+django-allauth==0.40.0
+django-crispy-forms==1.8.1
+django-mathfilters==0.4.0
+django-model-utils==3.1.2
+django-stubs==1.2.0
+djangocms-installer==1.0.2
+djangorestframework==3.9.2
+djangorestframework-stubs==0.4.2
+facebook-business==5.0.2
+idna==2.8
+isort==4.3.17
+itypes==1.1.0
+Jinja2==2.10.1
+kombu==4.2.1
+lazy-object-proxy==1.4.3
+libqutrub==1.2.1
+MarkupSafe==1.1.1
+mccabe==0.6.1
+mypy==0.740
+mypy-extensions==0.4.3
+Naftawayh==0.3
+nltk==3.4
+numpy==1.16.2
+oauthlib==3.1.0
+pika==0.12.0
+Pillow==6.0.0
+PyArabic==0.6.5
+pycodestyle==2.5.0
+Pygments==2.4.2
+pylint==2.4.4
+pylint-django==2.0.12
+pylint-plugin-utils==0.6
+python3-openid==3.1.0
+pytz==2019.1
+repr==0.3.1
+requests==2.21.0
+requests-oauthlib==1.2.0
+singledispatch==3.4.0.3
+six==1.12.0
+soupsieve==1.9
 sqlparse==0.3.0
+swapper==1.1.0
+Tashaphyne==0.3.1
+typed-ast==1.4.0
+typing-extensions==3.7.4.1
+tzlocal==1.5.1
+uritemplate==3.0.0
+urllib3==1.24.2
+vine==1.1.4
+virtualenv==16.7.6
+wrapt==1.11.1
